--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navi fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand ms-5" href="#"><img src="/images/Group 558.png" alt="" /></a>
+        <a class="navbar-brand ms-5" href="#"><img src="Group 558.png" alt="" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
 
         </div>
         <div class="col-md-6 pt-5">
-          <img class=" img-fluid" src="./images/Group 728.png" alt="business">
+          <img class=" img-fluid" src="Group 728.png" alt="business">
         </div>
       </div>
     </div>
@@ -166,7 +166,7 @@
 
           <div class="row subRow1">
             <div class="col-md-4">
-              <div class="icon"><img src="images/Virtual Assistant.png" /></div>
+              <div class="icon"><img src="Virtual Assistant.png" /></div>
               <h3>Virtual Assistant</h3>
               <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Quis odio modi recusandae aspernatur incidunt repellat quam necessitatibus
@@ -174,7 +174,7 @@
             </div>
 
             <div class="col-md-4">
-              <div class="icon"><img src="images/Build in business intelligence.png" /></div>
+              <div class="icon"><img src="Build in business intelligence.png" /></div>
               <h3>Build In Business Intelligence </h3>
               <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Quis odio modi recusandae aspernatur incidunt repellat quam necessitatibus
@@ -182,7 +182,7 @@
             </div>
 
             <div class="col-md-4">
-              <div class="icon"><img src="images/Privacy of Data.png" /></div>
+              <div class="icon"><img src="Privacy of Data.png" /></div>
               <h3>We don't keep your data,you do!</h3>
               <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Quis odio modi recusandae aspernatur incidunt repellat quam necessitatibus
@@ -192,7 +192,7 @@
 
           <div class="row subRow1">
             <div class="col-md-6">
-              <div class="icon"><img src="images/First fully Configurable Suite.png" /></div>
+              <div class="icon"><img src="First fully Configurable Suite.png" /></div>
               <h3>First Fully Configurable Suite</h3>
               <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Quis odio modi recusandae aspernatur incidunt repellat quam necessitatibus
@@ -200,7 +200,7 @@
             </div>
 
             <div class="col-md-6">
-              <div class="icon"><img src="images/robot.png" style="width: auto;" /></div>
+              <div class="icon"><img src="robot.png" style="width: auto;" /></div>
               <h3>Connecting Dots </h3>
               <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Quis odio modi recusandae aspernatur incidunt repellat quam necessitatibus
@@ -236,20 +236,20 @@
         <div class="col-md-5 d-flex justify-content-center">
           <div class="card uiCards" style="width: 18rem;">
             <div class="card-body">
-              <img src="./images/Familiar Excel features.png" alt="excel">
+              <img src="Familiar Excel features.png" alt="excel">
               <h5 class="card-title">Familiar Excel Features</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim alias excepturi
                 eveniet molestias provident? Odit earum amet illum neque, ut eum quaerat enim molestiae impedit fugiat
                 ipsa quidem accusantium inventore.</p>
               <h6 class="card-link">Explore</h6>
-              <img class="arrowUI img-fluid" src="./images/Group 722.png" alt="">
+              <img class="arrowUI img-fluid" src="Group 722.png" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-5 d-flex justify-content-center">
           <div class="card uiCards" style="width: 18rem;">
             <div class="card-body">
-              <img src="./images/Action Queues.png" alt="">
+              <img src="Action Queues.png" alt="">
               <h5 class="card-title">Action Queues</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur,
                 adipisicdsfsdfsdfdsfffffsdfsdfffffffffffffffffff sequi sed dolorum molestias, pariatur quod atque et
@@ -295,7 +295,7 @@
         <!-- card -->
         <div class="col-md-4">
           <div class="row">
-            <img style="width:auto" src="./images/Group 559.png" alt="NYGGS">
+            <img style="width:auto" src="Group 559.png" alt="NYGGS">
             <h5 style="color:  #5c5d5e;">Your business</h5>
             <h5 style="color:  #5c5d5e;">our solutions</h5>
             <div class="card fCard" style="width: 18rem;">
@@ -338,10 +338,10 @@
             <div class="container">
               <p>Privacy Policy|Site Map</p>
               <!-- icons -->
-              <img src="./images/facebook.png" alt="facebook">
-              <img src="./images/instagram.png" alt="instagram">
-              <img src="./images/twitter.png" alt="twitter">
-              <img src="./images/Group 725.png" alt="linkedin">
+              <img src="facebook.png" alt="facebook">
+              <img src="instagram.png" alt="instagram">
+              <img src="twitter.png" alt="twitter">
+              <img src="Group 725.png" alt="linkedin">
               
               <p>&copy;2021,All Rights Reserved</p>
             </div>
